--- a/Assets/StreamingAssets/player_config.json
+++ b/Assets/StreamingAssets/player_config.json
@@ -1,11 +1,11 @@
 {
   "mass": 2.0,
   "collisionForceMultiplier": 2.5,
-  "experienceThresholds": [0, 100, 300, 600, 1000],
+  "experienceThresholds": [0, 2000, 4000, 6000, 8000, 10000, 12000, 14000, 16000, 18000],
   "baseDamage": 100.0,
   "levelDamageMultiplier": 0.5,
-  "maxGrowthStage": 3,
-  "stageScales": [0.8, 1.0, 1.2],
-  "stageMass": [1.5, 2.0, 2.5],
-  "stageCollisionForce": [2.0, 2.5, 3.0]
+  "maxGrowthStage": 10,
+  "stageScales": [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0],
+  "stageMass": [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0],
+  "stageCollisionForce": [100, 120, 140, 160, 180, 200, 220, 240, 260, 280]
 }
