--- a/Assets/StreamingAssets/puck_config.json
+++ b/Assets/StreamingAssets/puck_config.json
@@ -3,10 +3,10 @@
   "frictionCoefficient": 0.995,
   "airResistance": 0.998,
   "minVelocityThreshold": 0.05,
-  "maxGrowthStage": 3,
-  "stageScales": [0.8, 1.0, 1.2],
-  "stageMass": [0.8, 1.0, 1.3],
-  "stageMaxSpeed": [15.0, 20.0, 25.0],
-  "stageMaxForce": [12.0, 16.0, 20.0],
-  "stageFriction": [0.993, 0.995, 0.997]
+  "maxGrowthStage": 10,
+  "stageScales": [1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0, 5.0],
+  "stageMass": [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0],
+  "stageMaxSpeed": [100.0, 110.0, 120.0, 130.0, 140.0, 150.0, 160.0, 170.0, 180.0, 200.0],
+  "stageMaxForce": [200.0, 220.0, 240.0, 260.0, 280.0, 300.0, 320.0, 340.0, 360.0, 400.0],
+  "stageFriction": [0.995, 0.9955, 0.996, 0.9965, 0.997, 0.9975, 0.998, 0.9985, 0.999, 0.999]
 }
