--- a/Assets/StreamingAssets/player_config.json
+++ b/Assets/StreamingAssets/player_config.json
@@ -2,10 +2,9 @@
   "mass": 2.0,
   "collisionForceMultiplier": 2.5,
   "experienceThresholds": [0, 2000, 4000, 6000, 8000, 10000, 12000, 14000, 16000, 18000],
-  "baseDamage": 100.0,
-  "levelDamageMultiplier": 0.5,
   "maxGrowthStage": 10,
   "stageScales": [1.0, 1.25, 1.5, 2.25, 2.5, 2.75, 3.5, 3.75, 4.0, 5.0],
   "stageMass": [1.0, 1.25, 1.5, 2.25, 2.5, 2.75, 3.5, 3.75, 4.0, 5.0],
-  "stageCollisionForce": [100, 125, 150, 225, 250, 275, 350, 375, 400, 500]
+  "stageCollisionForce": [100, 125, 150, 225, 250, 275, 350, 375, 400, 500],
+  "stageAttackPower": [100, 125, 150, 225, 250, 275, 350, 375, 400, 500]
 }
